# ghbot

./: CMakeLists.txt  main.cpp
bot/: bot.cpp  bot.hpp
lang/: lang_manager.cpp  lang_manager.h
lang/en/uk/: en_uk.cpp  en_uk.hpp
lang/en/us/: en_us.cpp  en_us.hpp
lang/es/: es.cpp  es.h
lang/fr/: fr.cpp  fr.h
modules/: module_loader.cpp  module_loader.hpp
modules/show/: Show_Module.cpp  Show_Module.hpp
modules/venue/: venue_manager.cpp  venue_manager.h
utils/config/: Config.cpp  Config.hpp
utils/config/reader/: config_reader.cpp  config_reader.hpp
utils/config/writer/: config_writer.cpp  config_writer.hpp
utils/database/: Database.cpp  Database.hpp
utils/helpers/: Helpers.cpp  Helpers.h
utils/logger/: logger.cpp  logger.hpp
utils/message_handler/: message_handler.cpp  message_handler.hpp
